err.txt
In file included from /home/sakakibara/monte-carlo-ray-tracer_approx/source/bvh/bvh.cpp:1:
/home/sakakibara/monte-carlo-ray-tracer_approx/source/bvh/bvh2.hpp:5:90: error: ‘BuildNode’ was not declared in this scope
    5 | void recursiveBuildFromOctree(const Octree_SurfaceCentroid &octree_node, std::shared_ptr<BuildNode> bvh_node);
      |                                                                                          ^~~~~~~~~
/home/sakakibara/monte-carlo-ray-tracer_approx/source/bvh/bvh2.hpp:5:99: error: template argument 1 is invalid
    5 | void recursiveBuildFromOctree(const Octree_SurfaceCentroid &octree_node, std::shared_ptr<BuildNode> bvh_node);
      |                                                                                                   ^
/home/sakakibara/monte-carlo-ray-tracer_approx/source/bvh/bvh.cpp: In constructor ‘BVH::BVH(const BoundingBox&, const std::vector<std::shared_ptr<Surface::Base> >&, const json&)’:
/home/sakakibara/monte-carlo-ray-tracer_approx/source/bvh/bvh.cpp:43:32: error: ‘compMax’ is not a member of ‘glm’
   43 |         double half_max = glm::compMax(root->BB.dimensions()) / 2.0;
      |                                ^~~~~~~
/home/sakakibara/monte-carlo-ray-tracer_approx/source/bvh/bvh.cpp:53:45: error: cannot convert ‘std::shared_ptr<BVH::BuildNode>’ to ‘int’
   53 |         recursiveBuildFromOctree(hierarchy, root);
      |                                             ^~~~
      |                                             |
      |                                             std::shared_ptr<BVH::BuildNode>
In file included from /home/sakakibara/monte-carlo-ray-tracer_approx/source/bvh/bvh.cpp:1:
/home/sakakibara/monte-carlo-ray-tracer_approx/source/bvh/bvh2.hpp:5:101: note:   initializing argument 2 of ‘void recursiveBuildFromOctree(const Octree_SurfaceCentroid&, int)’
    5 | void recursiveBuildFromOctree(const Octree_SurfaceCentroid &octree_node, std::shared_ptr<BuildNode> bvh_node);
      |                                                                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~
/home/sakakibara/monte-carlo-ray-tracer_approx/source/bvh/bvh.cpp: At global scope:
/home/sakakibara/monte-carlo-ray-tracer_approx/source/bvh/bvh.cpp:125:6: error: no declaration matches ‘void BVH::recursiveBuildFromOctree(const Octree_SurfaceCentroid&, std::shared_ptr<BVH::BuildNode>)’
  125 | void BVH::recursiveBuildFromOctree(const Octree_SurfaceCentroid &octree_node, std::shared_ptr<BuildNode> bvh_node)
      |      ^~~
/home/sakakibara/monte-carlo-ray-tracer_approx/source/bvh/bvh.cpp:125:6: note: no functions named ‘void BVH::recursiveBuildFromOctree(const Octree_SurfaceCentroid&, std::shared_ptr<BVH::BuildNode>)’
In file included from /home/sakakibara/monte-carlo-ray-tracer_approx/source/bvh/../octree/octree_SurfaceCentroid.hpp:9,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/source/bvh/bvh2.hpp:3,
                 from /home/sakakibara/monte-carlo-ray-tracer_approx/source/bvh/bvh.cpp:1:
/home/sakakibara/monte-carlo-ray-tracer_approx/source/bvh/../octree/../bvh/bvh.hpp:16:7: note: ‘class BVH’ defined here
   16 | class BVH
      |       ^~~
/home/sakakibara/monte-carlo-ray-tracer_approx/source/bvh/bvh.cpp: In member function ‘void BVH::recursiveBuildBinarySAH(std::shared_ptr<BVH::BuildNode>)’:
/home/sakakibara/monte-carlo-ray-tracer_approx/source/bvh/bvh.cpp:181:35: error: ‘C’ has not been declared
  181 |     if (extent_dims[split_axis] < C::EPSILON)
      |                                   ^
/home/sakakibara/monte-carlo-ray-tracer_approx/source/bvh/bvh.cpp: In member function ‘void BVH::recursiveBuildQuaternarySAH(std::shared_ptr<BVH::BuildNode>)’:
/home/sakakibara/monte-carlo-ray-tracer_approx/source/bvh/bvh.cpp:308:31: error: ‘C’ has not been declared
  308 |     if (extent_dims[axes.x] < C::EPSILON || extent_dims[axes.y] < C::EPSILON)
      |                               ^
/home/sakakibara/monte-carlo-ray-tracer_approx/source/bvh/bvh.cpp:308:67: error: ‘C’ has not been declared
  308 |     if (extent_dims[axes.x] < C::EPSILON || extent_dims[axes.y] < C::EPSILON)
      |                                                                   ^
make[2]: *** [CMakeFiles/monte-carlo-ray-tracer.dir/build.make:76: CMakeFiles/monte-carlo-ray-tracer.dir/source/bvh/bvh.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:83: CMakeFiles/monte-carlo-ray-tracer.dir/all] Error 2
make: *** [Makefile:91: all] Error 2
